small changes and fix in ui owl

--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1,3 +1,4 @@
+/*properties for normal screen size starts here  */
 .lang {
   text-decoration: none;
 }
@@ -1329,12 +1330,12 @@
 }
 
 .accept_btn {
-  background-color: #f24b4b;
+  background-color: #FF6900;
   color: #fff;
   outline: 0;
   border-radius: 6px;
   z-index: 100;
-  border: 1px solid #f24b4b;
+  border: 1px solid #FF6900;
   max-width: 200px;
   padding: .3em 1.3em;
   font-size: 16px;
@@ -1343,7 +1344,31 @@
   top: 3vh;
 }
 
-/*  vignessshh*/
+.accept_btn:hover {
+  background-color: #FF6900;
+  color: #fff;
+}
+
+.decline_btn {
+  position: absolute;
+  background-color: #142E5C;
+  color: #fff;
+  outline: 0;
+  border-radius: 6px;
+  z-index: 100;
+  border: 1px solid #142E5C;
+  max-width: 200px;
+  padding: .3em 1.3em;
+  font-size: 16px;
+  top: 3vh;
+  right: 11vw;
+}
+
+.decline_btn:hover {
+  background-color: #142E5C;
+  color: #fff;
+}
+
 .button-blue {
   color: #fff;
   background-color: #607acd;
@@ -1521,10 +1546,10 @@
   color: #000;
 }
 
-/*  vignesshhh*/
-/* currently working***********************************************************************************************************/
-/* for bigger display size.... */
+/* for normal screens ends here.... */
 @media only screen and (min-width:1500px) {
+
+  /* for hd screens starts here.... */
   .flex_section {
     margin: 100px 300px 100px 300px !important;
   }
@@ -1547,10 +1572,13 @@
     font-size: 18px;
     padding-top: 20px;
   }
+
+  /* for hd screens ends here.... */
 }
 
-/* mobile display size starts here.... */
 @media only screen and (max-width:768px) {
+
+  /* mobile display size starts here.... */
   .ai_img_div {
     padding: 0px;
   }
@@ -1599,6 +1627,14 @@
 
   .playbtn {
     display: none;
+  }
+
+  .blog_section {
+    border-radius: 0px !important;
+  }
+
+  .blogimg {
+    border-top-left-radius: 0px !important;
   }
 
   .demo_video {
@@ -1954,11 +1990,6 @@
     width: 100%;
   }
 
-  .common_padding {
-    padding-left: 3px;
-    padding-right: 3px;
-  }
-
   .bullet_text {
     width: 87%;
     display: block;
@@ -2036,7 +2067,6 @@
     padding-top: 14px;
   }
 
-  /* vignesshhh */
   .visualimg {
     min-height: 65vh;
   }
@@ -2084,7 +2114,6 @@
     padding-top: 1em;
   }
 
-  /* vignesshhh */
   /* .blog_container, .sec1Right, .sec2Left, .sec2thirdRow{
     flex-direction: column;
     width: 100%;
@@ -2263,47 +2292,27 @@
   .lineSvg {
     display: none;
   }
+
+  .accept_btn {
+    top: 1vh;
+    right: 5vw;
+  }
+
+  .decline_btn {
+    top: 1vh;
+    right: 30vw;
+  }
+  .common_padding{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  /* mobile screen size ends here.... */
 }
 
-.accept_btn {
-  background-color: #FF6900;
-  color: #fff;
-  outline: 0;
-  border-radius: 6px;
-  z-index: 100;
-  border: 1px solid #FF6900;
-  max-width: 200px;
-  padding: .3em 1.3em;
-  font-size: 16px;
-  top: 1vh;
-  right: 5vw;
-}
-.accept_btn:hover {
-  background-color: #FF6900;
-  color: #fff;
-}
-.decline_btn {
-  position: absolute;
-  background-color: #142E5C;
-  color: #fff;
-  outline: 0;
-  border-radius: 6px;
-  z-index: 100;
-  border: 1px solid #142E5C;
-  max-width: 200px;
-  padding: .3em 1.3em;
-  font-size: 16px;
-  top: 1vh;
-  right: 11vw;
-}
-.decline_btn:hover {
-  background-color: #142E5C;
-  color: #fff;
-}
-
-/* mobile display size ends here.... */
-/* for iphones.... */
 @media only screen and (device-width : 414px) and (device-height : 736px) and (-webkit-device-pixel-ratio : 3) {
+
+  /* for iphones.... */
   .personInfo {
     padding-left: 0px !important;
     margin: 30px !important;
@@ -2322,8 +2331,21 @@
     top: 33%;
     left: 37%;
   }
+
+  .cookie_agremt {
+    top: 76vh;
+    left: 15px;
+    padding-top: 20px;
+  }
+  .common_padding{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  /* iphone screen size ends here */
 }
 
+/* again for normal displays starts here */
 .dp {
   width: 80px;
 }
@@ -2832,6 +2854,8 @@ figure {
 
 .blog_section {
   margin: 100px 120px 100px 120px;
+  min-height: 530px;
+  border-radius: 10px;
 }
 
 .blogContent {
@@ -2844,15 +2868,38 @@ figure {
   min-height: 450px;
 }
 
-/* @media  screen and (max-width: 1920px) {
-  .flex_section {
-    margin: 100px 300px 100px 300px !important;
-  }
-  .blog_section {
-    margin: 100px 300px 100px 300px !important;
+@media screen and (device-width : 411px) and (device-height : 823px) {
+
+  /* for google pixel devices starts here */
+  .cookie_agremt {
+    top: 74vh;
+    left: 15px;
+    padding-top: 20px;
+    font-size: 14px;
   }
 
-    .enterpriseimg {
-      display: none;
+  .personInfo {
+    padding-left: 0px !important;
+    margin: 30px !important;
+  }
 
-} */
+  .circles {
+    right: 10px;
+  }
+
+  .sticker {
+    top: 27%;
+    left: 37%;
+  }
+
+  .mobile {
+    top: 33%;
+    left: 37%;
+  }
+  .common_padding{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  /* for google pixel devices ends here */
+}
