--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -154,7 +154,7 @@
 </div>
 
 
-<div class="blog_section shaddowed" style="min-height:530px; border-radius:10px;">
+<div class="blog_section shaddowed">
   <div class="col-md-6 col-sm-12" style="padding:0px;">
     <div class="blogimg">
       <div id="date">
@@ -245,7 +245,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> 
 
 <div class="row" style="margin:0px;">
   <div class="col-md-8 col-md-offset-2">
