--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -28,7 +28,26 @@ body {
     font-family: "Noto Sans", Tahoma, sans-serif;
     font-size: 0.8rem;
 }
+#myQATableHeader th{
+  text-align: center;
+  padding: 10px;
+}
 
+#myQATable{
+  border-collapse: collapse;
+  width: 100%;
+
+}
+#myQATable tr:not(:first-child){
+cursor: pointer
+}
+#myQATable td{
+  border: 1px solid #dddddd;
+  padding: 10px 5px;
+}
+#myQATable tr:nth-child(even){
+  background-color: #dddddd;
+}
 /* @media only screen and (max-width:600px) {
   html {
       font-size: 10px;
