--- a/performance/static/css/app.performance.dash.css
+++ b/performance/static/css/app.performance.dash.css
@@ -1,10 +1,14 @@
 .caret1:before {
   content: "";
-  position: absolute;
   width: 0;
   height: 0;
   left: 110px;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
   border-bottom: 30px solid #8FC564;
+}
+.firstrow h3{
+
+  font-weight:bold;
+  padding-top: 20px;
 }
