--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -295,7 +295,7 @@
                     <button ng-if="mode=='verify'" ng-click="verify()" class="btn btn-primary">Verify and Login</button>
                   </div>
                 <div class="col-lg-12 text-center" ng-if="showActiveMsg">
-                  <p> Your account is yet to be activated ! We will inform you once it is done! </p>
+                  <p> Your account is not activated yet ! We will inform you once it is done! </p>
                   <button ng-click="continue()" style="width:100px" class="btn btn-primary">Continue</button>
                 </div>
               </div>
