--- a/homepage/templates/registration.lite.html
+++ b/homepage/templates/registration.lite.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="container" style="padding-left: 40px;padding-right: 40px;margin-top:40px;">
+        <div class="container" style="padding-left: 15px;padding-right: 15px;margin-top:40px;">
           {% verbatim %}
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
@@ -77,7 +77,7 @@
                     <div class="row " style="margin-bottom:15px;" ng-if="mode == 'main'||'verify'">
                       <div class="col-md-6 col-md-offset-3">
                         <div class="row">
-                          <div class="col-md-3 col-sm-3 col-xs-3">
+                          <div class="col-md-3 col-sm-3 col-xs-3" style="padding-right:0px">
                             <span><i class="fa fa-phone" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i> &nbsp;&nbsp;&nbsp;+91</span>
                           </div>
                           <div class="col-md-9 col-sm-9 col-xs-9">
@@ -201,10 +201,10 @@
               </div>
             </div>
             <div class="row" style= "padding-bottom:20px">
-            <div class="col-lg-6 col-md-6 text-right" style="margin-top:20px;">
+            <div class="col-lg-6 col-xs-6 text-right" style="margin-top:20px;">
               <button ng-click="skip()" style="width:100px" class="btn btn-primary">Skip</button>
             </div>
-                <div class="col-lg-6 col-md-6 text-left" style="margin-top:20px;">
+                <div class="col-lg-6 col-xs-6 text-left" style="margin-top:20px;">
               <button  ng-click="saveData()" style="width:100px"  class="btn btn-primary">Submit</button>
             </div>
           </div>
