chnges related to phone code

--- a/homepage/static/css/agency.css
+++ b/homepage/static/css/agency.css
@@ -7,6 +7,10 @@
   display: none;
 }
 
+.onHoverli:hover{
+  background-color: #eee;
+}
+
 .has-danger .form-control-feedback , .has-success .form-control-feedback{
   display: default !important;
 }
