--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -167,7 +167,7 @@
                            <ul class="dropdown-menu" style="height: 200px;overflow-y: scroll;width: 304px;">
                              <li class="onHoverli" style="padding: 5px 15px; cursor:pointer;" ng-repeat="c in countryList" ng-click="setSelected(c)">
                                <span style="min-width:30px; height:22px"> <img ng-src="{{c.flag}}" alt="flag" style="width:26px; height:20px"></span>
-                               {{c.name.slice(0,26)}} {{c.phonecode}}</li>
+                               {{c.name.slice(0,26)}} <span class="text-muted"> +{{c.phonecode}}</span></li>
                            </ul>
                           </div>
 
