--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -3451,3 +3451,185 @@ figure {
 .cent:hover .pro_hov {
   display: block;
 }
+
+
+/* ------------ */
+.top {
+  position: relative;
+  min-height: 30vh;
+}
+
+.top h1 {
+  color: #fff;
+  padding-top: 3em;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+.top h1::after {
+  width: 3em;
+  height: 1em;
+  content: '';
+  bottom: 0px;
+  position: absolute;
+  display: block;
+  border-bottom: 2px solid #00EDA3;
+}
+
+.top h2 {
+  color: #fff;
+  position: absolute;
+}
+
+.top::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 60vh;
+  background-image: url('/static/images/studentimg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(0.20);
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.custom-btn {
+  border-top-left-radius: 2em;
+  width: 60%;
+  padding: 12px 18px;
+  text-align: left;
+}
+
+.custom-btn .caret {
+  right: 10em;
+  position: absolute;
+  border-top: 8px dashed;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+  margin-top: 0.5em;
+}
+
+.dropdown-menu {
+  left: 20%;
+  width: 60%;
+}
+
+.filter {
+  filter: brightness(0.20);
+}
+
+.filter .caret {
+  right: 2em;
+}
+
+.likecard {
+  background-color: #FAFAFA;
+  min-height: 10vh;
+  margin: 10px;
+  width: 30%;
+  margin-bottom: 2em;
+}
+
+/* .title_h {
+  font-size: 20px;
+  padding: 10px;
+  border-bottom: 1px solid grey;
+} */
+
+.cards {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.cards:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.img-radius {
+  border-radius: 5px 5px 0 0;
+}
+
+.body {
+  padding: 2px 16px;
+}
+
+.table-align td {
+  width: 20%;
+}
+
+.hoverimg {
+  margin-top: 2em;
+}
+
+.hoverimg h4 {
+  padding-top: 1em;
+}
+
+.hoverimg span {
+  padding-top: 2em;
+}
+
+.hoverimg:hover {
+  background-image: url('/static/images/6.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+}
+
+.courses ul li {
+  list-style-type: disc;
+  font-size: 30px;
+  color: yellow;
+}
+
+.courses ul li span {
+  color: #fff;
+  font-size: 20px;
+}
+
+.btn-style {
+  border-top-left-radius: 2em;
+
+  padding: 12px 18px;
+  text-align: center;
+  margin-bottom: 2em;
+  margin-top:1em;
+  background-color:#fff;
+}
+.btn-style:hover {
+  color:#fff;
+  background-image: linear-gradient(90deg,#0AE1AB, #3DBECB,#6087EA);
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-image: url('/static/images/profile_overlay.png ');
+}
+
+.hover-circle:hover .overlay {
+  opacity: 1;
+}
+.btn-style1{
+  border-top-left-radius: 2em;
+
+  padding: 12px 18px;
+  text-align: center;
+  margin-bottom: 2em;
+  margin-top:2em;
+  background-image: linear-gradient(90deg,#0AE1AB, #3DBECB,#6087EA);
+}
+/* ------------------ */
